# ceti-2-theme

./: AUTHORS  NEWS  README.md  configure.ac
Ceti-3.14/: index.theme
Ceti-3.14-alternative-metacity/: index.theme
Ceti-3.14-alternative-metacity/metacity-1/: metacity-theme-3.xml
Ceti-3.14/gnome-shell/: _common.scss  gnome-shell-no-crash.css  gnome-shell.css
Ceti-3.14/gtk-3.0/: _applications.scss  _common.scss  _tabs.scss  applications-dark-overrides.css  applications.css  assets.txt  borders.txt  gtk-contained-dark.css  gtk-contained.css  gtk-main-dark.css  gtk-main.css  gtk-widgets-assets-dark.css  gtk-widgets-assets.css  gtk-widgets-borders-dark.css  gtk-widgets-borders-darker-overrides.css  gtk-widgets-borders.css  gtk-widgets-dark-overrides.css  gtk-widgets.css  sidebar-dark-overrides.css  sidebar.css  tabs-dark-overrides.css  tabs.css  window-controls.css
Ceti-3.14/metacity-1/: metacity-theme-3.xml
Chrome/: Ceti-3.14-chrome.crx
common/: Makefile.am  index.theme
common/gtk-2.0/: gtkrc  panel.rc
common/metacity-1/: metacity-theme-1.xml  metacity-theme-2.xml  metacity-theme-3.xml
common/xfwm4/: close-active.xpm  close-inactive.xpm  close-prelight.xpm  close-pressed.xpm  hide-active.xpm  hide-inactive.xpm  hide-prelight.xpm  hide-pressed.xpm  maximize-active.xpm  maximize-inactive.xpm  maximize-prelight.xpm  maximize-pressed.xpm  menu-active.xpm  menu-inactive.xpm  menu-pressed.xpm  shade-active.xpm  shade-inactive.xpm  shade-pressed.xpm  stick-active.xpm  stick-inactive.xpm  stick-pressed.xpm  (+17 more)
extra/: Makefile.am
m4/: ceti-enable.m4  ceti-gnome.m4
(+38 files in other folders)
